Initial commit with all components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codevolution-typescript",
+  "name": "react-in-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
